--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ jdk:
 before_script:
   - wget http://google-web-toolkit.googlecode.com/files/gwt-2.5.1.zip -O /tmp/gwt-2.5.1.zip
   - unzip -qq /tmp/gwt-2.5.1.zip
-  - export PATH=$PATH:$PWD/gwt-2.5.1/
+  - export GWT_HOME=$PWD/gwt-2.5.1/
+  - export PATH=$PATH:$GWT_HOME
