--- a/war/config.json
+++ b/war/config.json
@@ -1,7 +1,7 @@
 {
   "__comment__":"Configuration values used by the WMT client",
   "source":"https://github.com/csdms/wmt-client",
-  "version":"0.9.3",
-  "release_date":"2014-07-29",
+  "version":"1.0-beta.1",
+  "release_date":"2014-09-19",
   "api_url":"https://csdms.colorado.edu/wmt/api-dev/"
 }
