Increment version to 1.0

--- a/war/config.json
+++ b/war/config.json
@@ -1,8 +1,8 @@
 {
   "title":"Configuration values used by the WMT client",
   "source":"https://github.com/csdms/wmt-client",
-  "version":"1.0-beta.1",
-  "release_date":"2014-09-19",
+  "version":"1.0",
+  "release_date":"2015-07-09",
   "api_url":"https://csdms.colorado.edu/wmt/api-dev/",
   "execution_servers":[
     "beach.colorado.edu"
