--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,16 @@
 language: java
-
-sudo: false
-
 jdk:
   - oraclejdk7
 
-before_script:
-  - wget http://google-web-toolkit.googlecode.com/files/gwt-2.5.1.zip -O /tmp/gwt-2.5.1.zip
-  - unzip -qq /tmp/gwt-2.5.1.zip
-  - export GWT_HOME=$PWD/gwt-2.5.1/
+cache:
+  directories:
+    - $HOME/gwt-2.5.1
+
+sudo: false
+
+before_install:
+  - bash .travis/install_gwt.sh
+  - export GWT_HOME=$HOME/gwt-2.5.1
   - export PATH=$PATH:$GWT_HOME
 
 script:
