Add 'global' parameter attribute + method to access it

--- a/war/data/snow_degree_day.json
+++ b/war/data/snow_degree_day.json
@@ -45,6 +45,7 @@
         "type":"int"
       },
       "visible":true,
+      "global":true,
       "name":"Simulation run time",
       "key":"run_duration",
       "description":"Simulation run time"
