--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk:
 sudo: false
 
 before_script:
-  - wget http://google-web-toolkit.googlecode.com/files/gwt-2.5.1.zip
+  - wget http://csdms.colorado.edu/pub/tools/gwt/gwt-2.5.1.zip
   - unzip -qq gwt-2.5.1.zip
   - export GWT_HOME=$PWD/gwt-2.5.1
   - export PATH=$PATH:$GWT_HOME
