--- a/war/config.json
+++ b/war/config.json
@@ -1,8 +1,8 @@
 {
-  "title":"Configuration values used by the WMT client",
+  "title":"Permafrost Benchmark System configuration values",
   "source":"https://github.com/csdms/wmt-client",
-  "version":"1.0.1",
-  "release_date":"2016-03-21",
+  "version":"1.0",
+  "release_date":"2018-08-31",
   "api_url":"https://csdms.colorado.edu/wmt/api-dev/",
   "execution_servers":[
     "beach.colorado.edu"
