--- a/war/config.json
+++ b/war/config.json
@@ -3,7 +3,7 @@
   "source":"https://github.com/csdms/wmt-client",
   "version":"1.0",
   "release_date":"2018-08-31",
-  "api_url":"https://csdms.colorado.edu/wmt/api-dev/",
+  "api_url":"https://csdms.colorado.edu/wmt/api-pbs/",
   "execution_servers":[
     "beach.colorado.edu"
   ]
